[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scenes/Components/Galaxy/GalaxyStarSprite.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Components/ClickableArea3D.gd" type="Script" id=2]
[ext_resource path="res://Images/Star_Rings/star-ring-1.png" type="Texture" id=3]
[ext_resource path="res://Images/Star_Rings/star-ring-2.png" type="Texture" id=4]
[ext_resource path="res://Images/Star_Rings/star-ring-3.png" type="Texture" id=5]
[ext_resource path="res://Images/Star_Rings/star-ring-0.png" type="Texture" id=6]
[ext_resource path="res://Images/Races/FlagsBW/raceflag.ascshp_000.png" type="Texture" id=7]

[sub_resource type="SphereShape" id=1]

radius = 0.03

[node name="GalaxyStarSprite" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="Anchor" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Star" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = null
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="Area" type="Area" parent="Anchor/Star"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1
script/script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Anchor/Star/Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ControlRing" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="SecondaryControlRing" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 4 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="SelectedRing" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 4 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="SecondarySelectedRing" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 5 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="SeenRing" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 6 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="Flag" type="Sprite3D" parent="Anchor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 0
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = false
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, -16 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = false
flags/alpha_cut = 0
texture = ExtResource( 7 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )


